--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">My Application</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="welcome_to_timmy">VÄLKOMMEN TILL OB-TIMMY</string>
+    <string name="areYou">ÄR DU ANSTÄLLD INOM HANDELS ELLER RESTAURANG?</string>
+    <string name="changeable">Detta styr dina OB-tillägg och går att ändra i efterhand.</string>
 </resources>
